// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders 1`] = `
<div
  className="Box"
  style={Object {}}
>
  <div />
</div>
`;

exports[`Box renders with attributes 1`] = `
<div
  className="Box"
  style={
    Object {
      "backgroundColor": "var(--backgound)",
    }
  }
>
  <div />
</div>
`;
